# DOS2022

./: .gitignore  LICENCE  readme.md
Demo/Backend/: CHANGELOG.md  LICENSE  TodoListApi.cabal
Demo/Backend/Sql/: schema.sql  seed.sql
Demo/Backend/app/: Api.hs  App.hs  Main.hs
Demo/Backend/lib/Lib/: App.hs  Db.hs
Demo/Backend/lib/Lib/App/: Env.hs  Monad.hs
Demo/Backend/lib/Lib/Core/: Task.hs
Demo/Backend/lib/Lib/Db/: DbConnection.hs  Functions.hs  Schema.hs  Task.hs
Demo/Backend/lib/Lib/Effects/: Tasks.hs
Demo/Frontend/: package.json  packages.dhall  pnpm-lock.yaml  spago.dhall
Demo/Frontend/src/: Main.purs
Demo/Frontend/src/Api/: Echo.purs  Tasks.purs
Demo/Frontend/src/Components/: Main.purs  TodoItem.purs
Demo/Frontend/src/Models/: Task.purs
Demo/Html/: .gitignore  index.html  readme.md  site.css
Workshop/: CHANGELOG.md  Workshop.cabal
Workshop/app/: Main.hs
Workshop/app/Lib/: Test.hs
