cabal-version:      2.4
name:               Workshop
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Carsten König
maintainer:         Carsten.Koenig@hotmail.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Workshop
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Lib.Test

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- ghc-options:      -Wall
    build-depends:    base ^>=4.16.3.0,
                      text
    hs-source-dirs:   app
    default-language: Haskell2010
